--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head><title>UTS GIT</title></head>
 <body>
 <p>Ini adalah UTS Git saya dalam matakuliah Komputasi Awan</p>
+  <p>nama saya Endah Sriwahyuni</p>
 </body>
 </html>
 
